tests/Rules/Forms/Fixtures/valid/input_with_label.html.twig
<html>
<body>
<label for="name">Name</label>
<input id="name" />
</body>
</html>
