tests/Rules/Forms/Fixtures/invalid/input_empty_aria_label.html.twig
{# 1 errors #}
<html>
<body>
<input type="text" aria-label="" />
</body>
</html>
